Update 1.19.4-0.6.2
-Update Gradle to 7.6.3
-Update Forge to 45.2.8
-Update LICENSE
-Update README.md

-Port changes from 1.18.2-0.6.2

Bugfixes:
-Fixed no experience from crafting specialization
-Fixed raw debris block "mineable" and "needs_tool" tags.
-Fixed woodcutting not working properly on dedicated server

-Tweaked treasure weights to be less overpowered.